--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lottiefiles/dotlottie-react": "^0.12.1",
     "autoprefixer": "^10.4.20",
     "framer-motion": "^11.15.0",
     "gsap": "^3.12.5",
