--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
     "@lottiefiles/dotlottie-react": "^0.12.1",
     "autoprefixer": "^10.4.20",
     "framer-motion": "^11.15.0",
