--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.1",
     "@lottiefiles/dotlottie-react": "^0.12.1",
+    "@uidotdev/usehooks": "^2.4.1",
     "autoprefixer": "^10.4.20",
     "framer-motion": "^11.15.0",
     "gsap": "^3.12.5",
