--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@lottiefiles/dotlottie-react": "^0.12.1",
     "@uidotdev/usehooks": "^2.4.1",
     "autoprefixer": "^10.4.20",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
     "gsap": "^3.12.5",
     "lucide-react": "^0.469.0",
